--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -207,3 +207,13 @@
         margin-left: 10px;
     }
 }
+
+.btn-carga {
+    background-color: #F3F4F5;
+    border-radius: 8px;
+    font-size: 16px;
+    color: #2274FF;
+    font-weight: bold;
+    padding: 1rem;
+    color: #BFC1C5;
+}
