--- a/app/scss/pages/_pago.scss
+++ b/app/scss/pages/_pago.scss
@@ -1,6 +1,6 @@
 .page-pago {
     /* border:1px solid red; */
-    background-image: url(../images/page-pago1.jpg);
+   /*  background-image: url(../images/page-pago1.jpg); */
     background-position: top center;
     .content-page {
         background-color: transparent; 
@@ -16,6 +16,131 @@
     text-align: center;
 }
 
-.section-contenido {
+/* .section-pago {
     height: 1330px;
+} */
+
+.slider-pago {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 22px;
+    margin-bottom: 0.6rem;
+    li {
+        width: 160px;
+        height: 90px;
+        background: #FFFFFF;
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.12);
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        margin-bottom: 33px;
+        cursor: pointer;
+        &.active {
+            background: #E7F0FF;
+            border: 3px solid #2274FF;
+            i {
+                display: block;
+            }
+        }
+        a {
+            span {
+                color: $blue-dark;
+                font-weight: 900;
+                font-size: 18px;
+                line-height: 22px
+            }
+            &:hover {
+                text-decoration: none;
+            }
+        }
+        i {
+            display: none;
+            position: absolute;
+            top: -10px;
+            right: -10px;
+        }
+    }
+}
+
+.box-recomendado {
+    margin-top: 20px;
+    border-top: 1px dashed #B7C0CE;
+    border-bottom: 1px dashed #B7C0CE;
+    padding: 20px 0 30px 0;
+}
+
+.row-title {
+    display: flex;
+}
+
+.row-title-explain {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box-convenios {
+    background-color: $blue-light;
+    padding: 16px 24px 24px 24px;
+    margin-top: 30px;
+    border-radius: 5px;
+}
+
+.input-group-pago {
+    .input-group-prepend {
+        .input-group-text {
+            background-color: #19CE74;
+            border: 1px solid #109954;
+            border-top-right-radius: 5px !important;
+            border-bottom-right-radius: 5px!important;
+        }
+    }
+}
+
+.box-centro-ayuda {
+    background-color: #D6F0FE;
+    padding: 16px 24px 24px 24px;
+    margin-top: 36px;
+    border-radius: 5px;
+}
+
+.lista-ayuda {
+    display: block;
+    margin-top: 12px;
+    margin-bottom: 2rem;
+    li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 14px;
+        margin-bottom: 12px;
+    }
+}
+
+.lista-redes {
+    margin-top: 8px;
+    a {
+        font-size: 20px;
+        margin-right: 16px;
+    }
+}
+
+.texto-precio {
+    color:$black-light;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.section-realizar-pago {
+    margin-top: 30px;
+    /* background-color: rgba(255,0,0,0.1); */
+    background: #FFFFFF;
+    box-shadow: 2px -2px 17px rgb(0 0 0 / 12%);
+    padding: 15px;
+    margin-bottom: 60px;
 }
