--- a/app/scss/pages/_pago.scss
+++ b/app/scss/pages/_pago.scss
@@ -2,9 +2,6 @@
     /* border:1px solid red; */
    /*  background-image: url(../images/page-pago1.jpg); */
     background-position: top center;
-    .content-page {
-        background-color: transparent; 
-    }
 }
 
 .row-vence {
@@ -15,10 +12,6 @@
     font-weight: bold;
     text-align: center;
 }
-
-/* .section-pago {
-    height: 1330px;
-} */
 
 .slider-pago {
     list-style: none;
@@ -138,9 +131,12 @@
 
 .section-realizar-pago {
     margin-top: 30px;
-    /* background-color: rgba(255,0,0,0.1); */
     background: #FFFFFF;
     box-shadow: 2px -2px 17px rgb(0 0 0 / 12%);
     padding: 15px;
     margin-bottom: 60px;
+}
+
+.box-form .form-group {
+    margin-bottom: 1rem;
 }
