--- a/app/scss/pages/_comprobante.scss
+++ b/app/scss/pages/_comprobante.scss
@@ -1,13 +1,17 @@
-.page-comprobante {
-   /*  border-top:1px solid red;
-    background-image: url(../images/page-comprobante_mobile_exito.jpg);
-    background-position: top center; */
+/* .page-comprobante {
+    border-top:1px solid blue;
+    background-image: url(../images/page-comprobante_mobile_error.jpg);
+    background-position: top center;
 }
-
+ */
 .section-detalle-pago {
-    // height: 1000px;
     padding: 12px 14px;
 }
+
+.section-detalle-pago-error {
+    padding: 12px 14px 60px 14px;
+}
+
 
 .row-exito {
     height: 33px;
@@ -64,10 +68,44 @@
 
 .box-update-personal {
     margin: 20px 0;
-    /* padding-bottom: 0; */
     padding-bottom: 20px;
 }
 
 .input-group-info {
     margin-bottom: 10px;
+}
+
+/* Page Error */
+.row-error {
+    height: 33px;
+    background-color: #FA4B6A;
+    color:white;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0 10px;
+}
+
+/* .section-detalle-pago {
+    height: 460px;
+}
+ */
+.row-center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding-bottom: 18px;
+    line-height: 30px;
+    padding: 0 20px;
+    margin-top: 7px;
+    text-align: center;
+}
+
+.box-pagar-error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 1px dashed #B7C0CE;
+    padding: 36px 0 0px 0;
+    margin-top: 20px;
 }
