--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -6235,4 +6235,85 @@ body.page-mapa {
   padding: 36px 0 0px 0;
   margin-top: 20px;
 }
+
+/* .page-medidor {
+    border-top:1px solid blue;
+    background-image: url(../images/page-lectura-medidor.jpg);
+    background-position: top center;
+}
+ */
+/* .section-medidor {
+    height: 800px;
+    border-top:1px solid green;
+} */
+.content-medidor {
+  /* padding: 0 46px; */
+  padding: 0 46px 50px 46px;
+}
+
+.row-title-medidor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 20px;
+  margin-top: 4px;
+}
+
+.box-dato-personal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.box-medidor {
+  padding: 0 0 30px 0;
+  margin-top: 37px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.circle-number {
+  width: 18px;
+  height: 18px;
+  font-size: 12px;
+  border-radius: 100%;
+  background: #8C98B2;
+  min-width: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: white;
+  margin-top: 5px;
+  margin-right: 13px;
+}
+
+.box-input-medidor {
+  border-top: 1px dashed #B7C0CE;
+  padding: 25px 0;
+}
+.box-input-medidor .input-group {
+  border: 2px solid #B7C0CE;
+  border-radius: 5px;
+}
+.box-input-medidor .form-control {
+  height: 90px;
+  border: none;
+  padding: 0.375rem 1.2rem;
+}
+.box-input-medidor .input-group-prepend .input-group-text {
+  background-color: transparent;
+  border: none;
+}
 /*# sourceMappingURL=main-mobil.css.map */
