--- a/app/scss/pages/_lectura-medidor.scss
+++ b/app/scss/pages/_lectura-medidor.scss
@@ -2,17 +2,11 @@
     border-top:1px solid blue;
     background-image: url(../images/page-lectura-medidor.jpg);
     background-position: top center;
-}
- */
-
-/* .section-medidor {
-    height: 800px;
-    border-top:1px solid green;
 } */
 
+
 .content-medidor {
-    /* padding: 0 46px; */
-    padding: 0 46px 50px 46px;
+    padding: 0 46px 80px 46px;
 }
 
 
@@ -65,7 +59,12 @@
     .input-group-prepend .input-group-text {
         background-color: transparent;
         border: none;
+        padding: .375rem 1.5rem;
     }
 
 }
 
+.box-input-cuenta {
+    border-top: 1px dashed #B7C0CE;
+    padding-top: 25px;
+}
