--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -6238,11 +6238,17 @@ body.page-mapa {
 
 /* .page-medidor {
     border-top:1px solid blue;
-    background-image: url(../images/page-lectura-medidor.jpg);
-    background-position: top center;
-} */
+    background-image: url(../images/page-lectura-medidor-3.jpg);
+    background-position: 0 -8px;
+    background-position: 0 58px;
+}
+ */
 .content-medidor {
   padding: 0 46px 80px 46px;
+}
+
+.content-medidor-detalle {
+  padding: 0 25px 80px 25px;
 }
 
 .row-title-medidor {
@@ -6315,5 +6321,68 @@ body.page-mapa {
 .box-input-cuenta {
   border-top: 1px dashed #B7C0CE;
   padding-top: 25px;
+}
+
+/* medidor 3 */
+.row-cuenta {
+  border-top: 1px dashed #B7C0CE;
+  border-bottom: 1px dashed #B7C0CE;
+  padding: 20px 0 12px 0;
+}
+
+.table-flex-cuenta {
+  font-size: 14px;
+}
+.table-flex-cuenta .row {
+  margin-bottom: 10px;
+  border-bottom: 1px solid #F3F4F5;
+  padding-bottom: 6px;
+}
+.table-flex-cuenta .row.title-table {
+  padding-top: 4px;
+  padding-bottom: 12px;
+}
+.table-flex-cuenta .row.title-table .col:first-child {
+  color: #003287;
+}
+.table-flex-cuenta .row .col:first-child {
+  color: #2274FF;
+}
+.table-flex-cuenta .row:last-child {
+  border-bottom: 0;
+}
+
+.box-nombre-persona {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 10px;
+}
+.box-nombre-persona .avatar {
+  margin-right: 10px;
+}
+.box-persona-cuenta {
+  margin-top: 20px;
+}
+
+.perfil-persona {
+  margin-top: 13px;
+}
+
+.lista-dato-persona {
+  list-style: none;
+}
+.lista-dato-persona li {
+  color: #5F6268;
+  font-size: 12px;
+  margin-bottom: 12px;
+}
+.lista-dato-persona li span {
+  font-weight: bold;
+}
+
+.link-celeste {
+  color: #2D9CDB;
+  font-size: 14px;
 }
 /*# sourceMappingURL=main-mobil.css.map */
