--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -13,6 +13,15 @@
     font-size: 16px;
     color: $black-light;
 }
+.form-control-m {
+    padding: 0.8rem 1rem;
+    line-height: 1.5;
+    border-radius: 8px;
+    height: 40px;
+    border-color: $gray-dark;
+    font-size: 14px;
+    color: $black-light;
+}
 
 .form-group {
     select.form-control-lg.form-control {
