--- a/app/scss/pages/_lectura-medidor.scss
+++ b/app/scss/pages/_lectura-medidor.scss
@@ -164,7 +164,6 @@
     margin-bottom: 8px;
 }
 
-
 .lista-terminos {
     margin-top: 15px;
     padding-left: 20px;
@@ -172,7 +171,6 @@
     color: #B7C0CE;
     margin-bottom: 15px;
 }
-
 
 .form-lectura {
     .form-group {
@@ -185,8 +183,10 @@
     padding: 0 15px;
 }
 
-/* page 4*/
+/* lectura medidor 4*/
 
 .box-dato-lectura {
     margin-bottom: 20px;
 }
+
+/* lectura medidor 5**/
