--- a/app/scss/pages/_comprobante.scss
+++ b/app/scss/pages/_comprobante.scss
@@ -42,9 +42,13 @@
 }
 
 .table-flex {
-    font-size: 12px;
+    /* font-size: 12px; */
+    font-size: 14px;
     .row {
         margin-bottom: 10px;
+    }
+    strong {
+        color: $black-light;
     }
 }
 
@@ -108,4 +112,11 @@
     border-top: 1px dashed #B7C0CE;
     padding: 36px 0 0px 0;
     margin-top: 20px;
+}
+
+.section-detalle-lectura {
+    padding: 12px 14px 60px 14px;
+}
+.border-bottom {
+    border-bottom: 1px dashed #B7C0CE;
 }
