--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -32,5 +32,6 @@
 @import 'pages/comprobante';
 @import 'pages/lectura-medidor';
 @import 'pages/historial-pago';
+@import 'pages/mapa-reporte';
 
 
