--- a/app/scss/pages/_historial-pago.scss
+++ b/app/scss/pages/_historial-pago.scss
@@ -38,6 +38,9 @@
             font-size: 13px;
             border-bottom: 0;
         }
+        th {
+            border-bottom: none;
+        }
     }
     tbody {
         tr {
