--- a/app/scss/pages/_mapa-reporte.scss
+++ b/app/scss/pages/_mapa-reporte.scss
@@ -25,3 +25,38 @@
         font-size: 22px;
     }
 }
+
+
+/* Mapa reporte - 1*/
+
+/* .page-reporte-1 {
+    background-image: url(../images/page-reporte-1.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 20px;
+} */
+
+
+.content-reporta {
+    padding: 15px 0 100px 0;
+}
+
+.title-number {
+    display: flex;
+}
+
+.circle-title {
+    color: #8FB9FF;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #E7F0FF;
+    width: 32px;
+    height: 32px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-reporte {
+    padding: 15px 0;
+}
