--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3590,14 +3590,21 @@ a {
   margin-bottom: 2rem;
 }
 
+.form-group-small {
+  margin-bottom: 1rem;
+}
+
 .form-control {
-  padding: 0.8rem 1rem;
   line-height: 1.5;
   border-radius: 8px;
-  height: 60px;
   border-color: #B7C0CE;
   font-size: 16px;
   color: #5F6268;
+}
+
+.form-control-lg {
+  height: 60px;
+  padding: 0.8rem 1rem;
 }
 
 .form-control-m {
@@ -3611,6 +3618,10 @@ a {
 }
 
 .form-group select.form-control-lg.form-control {
+  height: 60px;
+}
+
+select.form-control-lg.form-control {
   height: 60px;
 }
 
@@ -6474,5 +6485,44 @@ body.page-mapa {
 .input-search .fa-search {
   color: #2274FF;
   font-size: 22px;
+}
+
+/* Mapa reporte - 1*/
+/* .page-reporte-1 {
+    background-image: url(../images/page-reporte-1.jpg);
+    background-repeat: no-repeat;
+    background-position: 0 20px;
+} */
+.content-reporta {
+  padding: 15px 0 100px 0;
+}
+
+.title-number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.circle-title {
+  color: #8FB9FF;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #E7F0FF;
+  width: 32px;
+  height: 32px;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form-reporte {
+  padding: 15px 0;
 }
 /*# sourceMappingURL=main-mobil.css.map */
