add page mapa-reporte-2

--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -6488,11 +6488,12 @@ body.page-mapa {
 }
 
 /* Mapa reporte - 1*/
-/* .page-reporte-1 {
-    background-image: url(../images/page-reporte-1.jpg);
-    background-repeat: no-repeat;
-    background-position: 0 20px;
-} */
+.page-reporte-2 {
+  background-image: url(../images/page-reporte-2.jpg);
+  background-repeat: no-repeat;
+  background-position: 0 20px;
+}
+
 .content-reporta {
   padding: 15px 0 100px 0;
 }
@@ -6524,5 +6525,40 @@ body.page-mapa {
 
 .form-reporte {
   padding: 15px 0;
+}
+
+.forn-icon img {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+}
+
+.box-seleccion {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  grid-gap: 16px;
+  padding: 17px 0;
+}
+.box-seleccion input {
+  width: auto;
+  padding: 0.25rem 0.8rem;
+  border-radius: 20px;
+  border: 2px solid #BFC1C5;
+  color: #BFC1C5;
+  font-size: 14px;
+  font-weight: bold;
+  height: 44px;
+}
+.box-seleccion .input-mediun {
+  width: 50%;
+}
+.box-seleccion .input-large {
+  width: 70%;
+}
+.box-seleccion .input-small {
+  width: 40%;
 }
 /*# sourceMappingURL=main-mobil.css.map */
