--- a/app/scss/pages/_mapa-reporte.scss
+++ b/app/scss/pages/_mapa-reporte.scss
@@ -29,12 +29,12 @@
 
 /* Mapa reporte - 1*/
 
-.page-reporte-2 {
+/* .page-reporte-2 {
     background-image: url(../images/page-reporte-2.jpg);
     background-repeat: no-repeat;
     background-position: 0 20px;
 }
-
+ */
 
 .content-reporta {
     padding: 15px 0 100px 0;
@@ -83,6 +83,12 @@
         font-size: 14px;
         font-weight: bold;
         height: 44px;
+        &.active {
+            background-color: #D2FFE9;
+            border: 2px solid #86ECB9;
+            font-size: 14px;
+            color: #19CE74;
+        }
     }
     .input-mediun {
         width: 50%;
