--- a/app/scss/pages/_comprobante.scss
+++ b/app/scss/pages/_comprobante.scss
@@ -51,7 +51,7 @@
     padding: 28px 0 20px 0;
 }
 
-.lista-boleta {
+.lista-switch {
     margin-top: 20px;
     .item-switch {
         margin-bottom: 30px;
